syntax = "proto3";

// TODO: support protobuff any
// import google/protobuf/any.proto
import "google/protobuf/timestamp.proto";
package ahghee.grpc;

// MemoryPointer needs fixed fields, so we can update them
// later without affecting the position of other messages
message MemoryPointer {
    fixed32 partitionkey = 1;
    fixed32 filename = 2;
    fixed64 offset = 3;
    fixed64 length = 4;
}

message TypeBytes {
    string typeiri = 1;
    bytes bytes = 2;
}

message NodeID {
    string remote = 1;
    string iri = 2;
    MemoryPointer pointer = 3; 
}

message DataBlock {
    oneof data {
        NodeID nodeid = 1;
        TypeBytes metabytes = 2;
        string str = 3;
        int32 i32 = 4;
        int64 i64 = 5;
        uint32 ui32 = 6;
        uint64 ui64 = 7;
        double d = 8;
        float f = 9;
        bool b = 10;
        MemoryPointer memorypointer = 11;
        Array array = 12;
        Map map = 13;
        //todo: add support for protobuf any
        //google.protobuf.Any any = 5;
    }
}

message Array{
    repeated DataBlock item = 1;
}
message Map{
    repeated KeyValue attributes = 1;
}

message TMD {
    int64 Timestamp = 1;
    DataBlock MetaData = 2;
    DataBlock Data = 3;
}

message KeyValue {
    TMD key = 1;
    TMD value = 2;
}

message Node {
    NodeID id = 1;
    repeated MemoryPointer fragments = 3;
    repeated KeyValue attributes = 4;
}

message Pointers {
    repeated MemoryPointer pointers = 1; 
}
message Range {
    int32 from = 1;
    int32 to = 2;
}
message FollowOperator {
    message FollowAny {
        Range range = 1;
    }
    message EdgeRange{
        DataBlock edge =1;
        Range range = 2;
    }
    message EdgeCMP {
        EdgeNum left = 1;
        string BOOLOP = 2;
        EdgeNum right = 3;
    }
    message EdgeNum {
        oneof op {
            EdgeRange edgeRange= 1;
            EdgeCMP edgeCmp= 2;
        }
    }    
    oneof Follow {
        FollowAny followAny = 1;
        EdgeNum followEdge = 2;
    }
}
message FilterOperator {
    message Compare {
        oneof cmpType {
            CompareKeyValue kevValueCmp= 1;
            CompareCompound compoundCmp= 2;
        }
    }
    message CompareKeyValue{
        DataBlock Property = 1;
        string MATHOP =2;
        DataBlock Value = 3;
    }
    message CompareCompound{
        Compare left = 1;
        string BOOLOP = 2;
        Compare right = 3;
    }
    Compare compare = 1;
}
message LimitFilter {
    int32 value =1;
}
message SkipFilter {
    int32 value =1;
}
message Step {
    oneof operator {
        FollowOperator follow = 1;
        FilterOperator filter = 2;
        LimitFilter limit = 4;
        SkipFilter skip = 5;
    }
    Step next = 3;
}

message Query {
    Step step = 1;
    repeated string iris = 2;
}

message PutResponse{
    bool success = 1;
}

message GetMetricsResponse{
    message Metric {
        float value =1;
        string name = 2;
        google.protobuf.Timestamp time = 3;
    }
    repeated Metric metrics = 1;
}
message GetMetricsRequest{
    repeated string names = 1;
}
message GetStatsRequest{
    message Stat{
        float value = 1;
        string topic = 2;
        string stat = 3;
    }
    repeated Stat stats = 1;
}
message GetStatsResponse{
    repeated string names = 1;
}
message ListStatsRequest{
    repeated string match = 1;
}
message ListStatsResponse{
    repeated string names = 1;
}
message ListPoliciesRequest{
    repeated string iris = 1;
}
message ListPoliciesResponse{
    repeated Node nodes = 1;
}
message LoadFile{
    string type = 1;
    string path = 2;
}
message LoadFileResponse{
    
}
service WatDbService {
    rpc Load (LoadFile) returns (LoadFileResponse) {}
    rpc Put (Node) returns (PutResponse) {}
    rpc Get (Query) returns (stream Node) {}
    rpc GetMetrics (GetMetricsRequest) returns (GetMetricsResponse){}
    rpc GetStats (GetStatsRequest) returns (GetStatsResponse){}
    rpc ListStats (ListStatsRequest) returns (ListStatsResponse){}
    rpc ListPolicies (ListPoliciesRequest) returns (stream Node){}
}